--- a/foryou.html
+++ b/foryou.html
@@ -1,147 +1,138 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ms">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday Aiwa</title>
+  <title>Happy Birthday 💙</title>
   <style>
     body {
       margin: 0;
+      padding: 0;
       height: 100vh;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
-      background: linear-gradient(135deg, #a1c4fd, #c2e9fb); /* biru lembut */
-      font-family: 'Poppins', sans-serif;
-      color: #003366;
+      background: linear-gradient(135deg, #a1c4fd, #c2e9fb);
+      font-family: "Comic Sans MS", cursive, sans-serif;
       text-align: center;
       overflow: hidden;
     }
     h1 {
-      font-size: 2.2rem;
+      font-size: 2.5em;
+      color: #003366;
       margin-bottom: 20px;
     }
-    #message {
-      font-size: 1.2rem;
-      max-width: 90%;
-      margin: 0 auto;
-      white-space: pre-line;
-      min-height: 120px;
+    #typing {
+      font-size: 1.2em;
+      color: #004080;
+      max-width: 80%;
     }
-    .btn {
+    button {
       margin-top: 20px;
-      background: rgba(255,255,255,0.8);
-      border: 2px solid #003366;
       padding: 12px 24px;
-      border-radius: 30px;
-      color: #003366;
-      font-size: 1rem;
-      font-weight: bold;
+      font-size: 1em;
+      border: none;
+      border-radius: 25px;
+      background: #4da6ff;
+      color: white;
       cursor: pointer;
       transition: 0.3s;
     }
-    .btn:hover {
-      background: #003366;
-      color: #fff;
+    button:hover {
+      background: #3399ff;
+      transform: scale(1.05);
     }
     canvas {
       position: fixed;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
       pointer-events: none;
     }
   </style>
 </head>
 <body>
+  <h1>💙 Selamat Hari Jadi, Aiwa! 💙</h1>
+  <p id="typing"></p>
+  <button onclick="playMusic()">💖 Tekan untuk Dengar Lagu 💖</button>
 
-  <h1>🎉 Selamat Hari Jadi Aiwa 🎂</h1>
-  <div id="message"></div>
-
-  <button class="btn" id="playBtn">🎶 Tekan sini untuk dengar lagu</button>
-
-  <audio id="bg-music" loop>
-    <source src="https://archive.org/download/the-walters-i-love-you-so_20230927_2012/The%20Walters%20-%20I%20Love%20You%20So.mp3" type="audio/mpeg">
+  <audio id="bg-music">
+    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+    Browser kau tidak support audio.
   </audio>
 
   <canvas id="confetti"></canvas>
 
   <script>
-    // typing effect
-    const text = `Semoga panjang umur, murah rezeki, dan happy selalu 💖
-Kau ni orang special bah… sebab tu saya berani buat benda ni khas untuk kau ❤️
-Harap tahun ni bawa banyak senyuman dan moment indah untuk kau 🥰`;
-
+    // Typing effect
+    const text = "Semoga hari jadi kau dipenuhi dengan senyuman, kebahagiaan, dan cinta. Dari saya, yang selalu mahu tengok kau bahagia. 💙";
     let i = 0;
-    function typeWriter() {
+    function typing() {
       if (i < text.length) {
-        document.getElementById("message").innerHTML += text.charAt(i);
+        document.getElementById("typing").innerHTML += text.charAt(i);
         i++;
-        setTimeout(typeWriter, 60);
+        setTimeout(typing, 50); // laju sikit, tak slow
       }
     }
-    typeWriter();
+    typing();
 
-    // play music on button click
-    document.getElementById("playBtn").addEventListener("click", () => {
+    // Music play function
+    function playMusic() {
       const music = document.getElementById("bg-music");
-      music.play().then(() => {
-        document.getElementById("playBtn").style.display = "none"; // hide button after play
-      }).catch(err => {
-        console.log("Browser block audio:", err);
-      });
-    });
+      music.play().catch(err => console.log("Autoplay block:", err));
+    }
 
-    // confetti animation
-    const confetti = document.getElementById("confetti");
-    const ctx = confetti.getContext("2d");
-    confetti.width = window.innerWidth;
-    confetti.height = window.innerHeight;
+    // Confetti
+    const canvas = document.getElementById('confetti');
+    const ctx = canvas.getContext('2d');
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
 
-    const pieces = [];
-    const numPieces = 150;
-
-    for (let i = 0; i < numPieces; i++) {
-      pieces.push({
-        x: Math.random() * confetti.width,
-        y: Math.random() * confetti.height - confetti.height,
-        w: 10,
-        h: 10,
-        color: `hsl(${Math.random() * 360}, 100%, 70%)`,
-        speed: Math.random() * 3 + 2,
-        angle: Math.random() * 360,
-        spin: Math.random() * 0.2 - 0.1
+    const confettiCount = 200;
+    const confetti = [];
+    for (let i = 0; i < confettiCount; i++) {
+      confetti.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height - canvas.height,
+        r: Math.random() * 6 + 4,
+        d: Math.random() * confettiCount,
+        color: "hsl(" + Math.random() * 360 + ",100%,50%)",
+        tilt: Math.floor(Math.random() * 10) - 10
       });
     }
 
-    function draw() {
-      ctx.clearRect(0, 0, confetti.width, confetti.height);
-      pieces.forEach(p => {
-        ctx.save();
-        ctx.translate(p.x, p.y);
-        ctx.rotate(p.angle);
-        ctx.fillStyle = p.color;
-        ctx.fillRect(-p.w/2, -p.h/2, p.w, p.h);
-        ctx.restore();
+    function drawConfetti() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+      for (let i = 0; i < confettiCount; i++) {
+        const c = confetti[i];
+        ctx.beginPath();
+        ctx.arc(c.x, c.y, c.r, 0, Math.PI * 2, false);
+        ctx.fillStyle = c.color;
+        ctx.fill();
+      }
+      update();
+      requestAnimationFrame(drawConfetti);
+    }
 
-        p.y += p.speed;
-        p.angle += p.spin;
-
-        if (p.y > confetti.height) {
-          p.y = -10;
-          p.x = Math.random() * confetti.width;
+    function update() {
+      for (let i = 0; i < confettiCount; i++) {
+        const c = confetti[i];
+        c.y += Math.cos(c.d) + 1 + c.r / 2;
+        c.x += Math.sin(c.d);
+        if (c.y > canvas.height) {
+          confetti[i] = {
+            x: Math.random() * canvas.width,
+            y: -10,
+            r: c.r,
+            d: c.d,
+            color: c.color,
+            tilt: c.tilt
+          };
         }
-      });
-      requestAnimationFrame(draw);
+      }
     }
-    draw();
 
-    window.addEventListener("resize", () => {
-      confetti.width = window.innerWidth;
-      confetti.height = window.innerHeight;
-    });
+    drawConfetti();
   </script>
 </body>
 </html>
