--- a/foryou.html
+++ b/foryou.html
@@ -1,170 +1,124 @@
 <!DOCTYPE html>
-<html lang="ms">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Happy Birthday Aiwa 🎉</title>
+  <title>Happy Birthday Aiwa 💙</title>
   <style>
-    * { margin:0; padding:0; box-sizing:border-box; }
-    body, html {
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
+    @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Poppins:wght@300;500;700&display=swap');
+
+    body {
+      margin: 0;
+      padding: 0;
       font-family: 'Poppins', sans-serif;
-      color: white;
-    }
-
-    /* Background image */
-    .bg {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: -2;
-    }
-    .overlay {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.45);
-      z-index: -1;
-    }
-
-    /* Content like TikTok text overlay */
-    .content {
-      position: absolute;
-      bottom: 15%;
-      left: 50%;
-      transform: translateX(-50%);
+      background: linear-gradient(135deg, #b3e5fc, #e1f5fe);
+      color: #333;
       text-align: center;
-      padding: 20px;
-      width: 90%;
-    }
-    h1 {
-      font-size: 2.2rem;
-      margin-bottom: 15px;
-      animation: fadeInDown 1s ease-out;
-    }
-    #typed {
-      font-size: 1.1rem;
-      line-height: 1.6;
-      white-space: pre-line;
-      animation: fadeInUp 1.5s ease-out;
+      overflow: hidden;
+      height: 100vh;
     }
 
-    /* Play button style */
-    #playBtn {
-      margin-top: 25px;
-      padding: 12px 24px;
+    .container {
+      position: relative;
+      z-index: 2;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      padding: 20px;
+    }
+
+    h1 {
+      font-family: 'Pacifico', cursive;
+      font-size: 2.5em;
+      color: #1565c0;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 1.2em;
+      color: #0d47a1;
+    }
+
+    .btn {
+      margin-top: 20px;
+      padding: 12px 25px;
+      background: #1565c0;
+      color: #fff;
       border: none;
       border-radius: 25px;
-      font-size: 1rem;
-      background: #ff2d55;
-      color: white;
+      font-size: 1em;
       cursor: pointer;
-      animation: fadeIn 2s forwards 2s;
+      transition: 0.3s;
     }
 
-    @keyframes fadeInDown {
-      from {opacity:0; transform:translate(-50%,-60%);}
-      to {opacity:1; transform:translate(-50%,-50%);}
-    }
-    @keyframes fadeInUp {
-      from {opacity:0; transform:translateY(30px);}
-      to {opacity:1; transform:translateY(0);}
-    }
-    @keyframes fadeIn {
-      from {opacity:0;}
-      to {opacity:1;}
+    .btn:hover {
+      background: #0d47a1;
     }
 
-    /* Confetti Canvas */
-    canvas {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      pointer-events: none;
+    /* Floating hearts animation */
+    .heart {
+      position: absolute;
+      bottom: -50px;
+      width: 25px;
+      height: 25px;
+      background: rgba(255, 82, 82, 0.8);
+      transform: rotate(45deg);
+      animation: floatUp 6s linear infinite;
+    }
+
+    .heart::before,
+    .heart::after {
+      content: '';
+      position: absolute;
+      width: 25px;
+      height: 25px;
+      border-radius: 50%;
+      background: rgba(255, 82, 82, 0.8);
+    }
+
+    .heart::before { top: -12px; left: 0; }
+    .heart::after { left: -12px; top: 0; }
+
+    @keyframes floatUp {
+      0% { transform: translateY(0) rotate(45deg); opacity: 1; }
+      100% { transform: translateY(-100vh) rotate(45deg); opacity: 0; }
     }
   </style>
 </head>
 <body>
-  <!-- Gambar background -->
-  <img class="bg" src="https://picsum.photos/720/1280?blur" alt="aiwa">
-  <div class="overlay"></div>
 
-  <div class="content">
-    <h1>💙 Selamat Hari Jadi Aiwa 💙</h1>
-    <div id="typed"></div>
-    <button id="playBtn">🎵 Play Lagu</button>
+  <div class="container">
+    <h1>Selamat Hari Lahir 💙</h1>
+    <p>Happy Birthday Aiwa 🎂</p>
+    <p>Semoga panjang umur, murah rezeki, dan bahagia selalu ✨</p>
+    <button class="btn" onclick="playMusic()">Klik sini 🎶</button>
   </div>
 
-  <canvas id="confetti"></canvas>
-
+  <!-- Audio -->
   <audio id="bg-music" loop>
-    <source src="https://www.soundhelix.com/examples/mp3/SoundHelix-Song-1.mp3" type="audio/mpeg">
+    <source src="music/iloveyouso.mp3" type="audio/mpeg">
   </audio>
 
   <script>
-    // Typing effect
-    const msg = `Semoga hari lahir kau penuh dengan cinta, senyuman & kejutan manis.
-Kau adalah insan istimewa yang selalu buat saya senyum 💙`;
-    let i = 0;
-    function typeWriter() {
-      if (i < msg.length) {
-        document.getElementById("typed").innerHTML += msg.charAt(i);
-        i++;
-        setTimeout(typeWriter, 50);
-      }
-    }
-    typeWriter();
-
-    // Music play
-    document.getElementById("playBtn").addEventListener("click", () => {
-      document.getElementById("bg-music").play();
-      document.getElementById("playBtn").style.display = "none";
-    });
-
-    // Confetti animation
-    const canvas = document.getElementById("confetti");
-    const ctx = canvas.getContext("2d");
-    canvas.width = window.innerWidth;
-    canvas.height = window.innerHeight;
-
-    const confettiCount = 150;
-    const confetti = [];
-    for (let i = 0; i < confettiCount; i++) {
-      confetti.push({
-        x: Math.random() * canvas.width,
-        y: Math.random() * canvas.height - canvas.height,
-        r: Math.random() * 6 + 4,
-        d: Math.random() * confettiCount,
-        color: "hsl(" + Math.random() * 360 + ",100%,50%)"
-      });
+    function playMusic() {
+      let audio = document.getElementById("bg-music");
+      audio.play();
+      document.querySelector(".btn").style.display = "none"; // hide button after clicked
     }
 
-    function draw() {
-      ctx.clearRect(0, 0, canvas.width, canvas.height);
-      confetti.forEach((c, idx) => {
-        ctx.beginPath();
-        ctx.arc(c.x, c.y, c.r, 0, 2 * Math.PI);
-        ctx.fillStyle = c.color;
-        ctx.fill();
-        c.y += Math.cos(c.d) + 1 + c.r/2;
-        if (c.y > canvas.height) {
-          confetti[idx].y = -10;
-          confetti[idx].x = Math.random() * canvas.width;
-        }
-      });
-      requestAnimationFrame(draw);
-    }
-    draw();
+    // Generate floating hearts
+    function createHeart() {
+      const heart = document.createElement("div");
+      heart.className = "heart";
+      heart.style.left = Math.random() * window.innerWidth + "px";
+      document.body.appendChild(heart);
 
-    window.addEventListener("resize", () => {
-      canvas.width = window.innerWidth;
-      canvas.height = window.innerHeight;
-    });
+      setTimeout(() => heart.remove(), 6000);
+    }
+    setInterval(createHeart, 500);
   </script>
+
 </body>
 </html>
