--- a/foryou.html
+++ b/foryou.html
@@ -98,7 +98,7 @@
 
   <!-- Audio -->
   <audio id="bg-music" loop>
-    <source src="music/iloveyouso.mp3" type="audio/mpeg">
+    <source src="iloveyouso.mp3" type="audio/mpeg">
   </audio>
 
   <script>
